[package]
name = "dlt"
version = "0.2.2"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
description = "DLT (direct linear transform) algorithm for camera calibration"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/strawlab/dlt"
keywords = ["computer", "vision", "photogrammetry"]
categories = ["algorithms", "computer-vision", "no-std", "science", "science::robotics"]

[dependencies]
nalgebra = {version="0.22", default-features=false, features=["libm"]}

[dev-dependencies]
approx = {version="0.3", default-features=false}

[features]
default = ["std"]

std = ["nalgebra/std"]

[workspace]
members = ["dlt-examples"]
