[package]
name = "dlt"
version = "0.13.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
description = "DLT (direct linear transform) algorithm for camera calibration"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/strawlab/dlt"
keywords = ["computer", "vision", "photogrammetry"]
categories = [
    "algorithms",
    "computer-vision",
    "no-std",
    "science",
    "science::robotics",
]
rust-version = "1.65"

[dependencies]
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx = { version = "0.5", default-features = false }

[features]
default = ["std"]

std = ["nalgebra/std"]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[package.metadata.docs.rs]
# pass `--all-features`
all-features = true

[workspace]
members = ["dlt-examples"]
